# dependabot-dep-poc

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml
.github/: create-tag.yml  dependabot.yml
.github/workflows/: static.yml  wiki.yml
docs/: api.rst  changes.rst  conf.py  contributing.rst  index.rst  overview.rst  structure.rst
docs/_build/doctrees/: environment.pickle
docs/_build/html/: index.html
docs/_build/markdown/: HOME.md  test.md
docs/_build/rst/doctrees/: index.doctree
docs/modules/: core.rst  services.rst
scripts/: install  lock  release.py
src/dependabot-dep-poc/: __init__.py
src/dependabot-impl-poc/: __init__.py
