[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dependabot-impl-poc"
authors = [
    {name = "Mantse Tshikhovhokhovho", email = "mantse@santamswitch.co.za"},
]
description = ""
requires-python = ">=3.11"
license = {file = "LICENSE"}
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
dynamic = ["version", "readme"]
dependencies = []

[packages]
dependabot-dep-poc = {ref = "2023.8.2", git = "ssh://git@github.com:Kilka-Software/dependabot-dep-poc.git"}

[tool.setuptools.packages.find]
where = "src"

[tool.setuptools_scm]
version = {attr = "dependabot-impl-poc.__version__"}

[tool.setuptools_scm.files]
readme = "README.rst"

[project.urls]
Homepage = "https://github.com/Kilka-Software/"
Issues = "https://github.com/Kilka-Software/dependabot-dep-poc/issues"
